[gd_scene load_steps=21 format=3 uid="uid://y65ir3supv5s"]

[ext_resource type="Script" uid="uid://cy0ulaqjxe5e3" path="res://Game/Doll/doll.gd" id="1_x8ebr"]
[ext_resource type="PackedScene" uid="uid://1374ob78ucv7" path="res://Game/Doll/doll_part.tscn" id="2_4v17s"]
[ext_resource type="PackedScene" uid="uid://c56fqxox0e0ia" path="res://Mesh/Skeleton/body_skeleton.tscn" id="2_k7aqf"]
[ext_resource type="Script" uid="uid://1n0mqd1c34ui" path="res://addons/wigglebone/wiggle_rotation_modifier_3d.gd" id="3_ghp2k"]
[ext_resource type="PackedScene" uid="uid://dyx0lcoi6r0tp" path="res://Game/Doll/FaceAnimator/voice_handler.tscn" id="3_l2cwv"]
[ext_resource type="Script" uid="uid://dk8kgax5eyeng" path="res://addons/wigglebone/wiggle_rotation_properties_3d.gd" id="4_avrwx"]
[ext_resource type="PackedScene" uid="uid://br61otcq86wpv" path="res://Game/Doll/doll_attach_to.tscn" id="4_mwovh"]
[ext_resource type="AnimationLibrary" uid="uid://nn3cjmcfumow" path="res://Anims/Raw/BasicAnims.glb" id="5_avrwx"]
[ext_resource type="AnimationLibrary" uid="uid://cmuxw6uiifp2h" path="res://Anims/Raw/LocomotionAnims.glb" id="7_l2cwv"]
[ext_resource type="AnimationLibrary" uid="uid://b08i0engip1rw" path="res://Anims/Raw/RestraintAnims.glb" id="8_yudco"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://bsf01bbt0ejbk" path="res://Game/Doll/Util/DollBlendTreeBase.tres" id="9_1pahp"]
[ext_resource type="PackedScene" uid="uid://bgux6rpndyvti" path="res://Mesh/Materials/MyLayeredTexture/my_layered_texture.tscn" id="10_ehs3x"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://snasey7u5o67" path="res://Game/Doll/Util/DollBlendTree.tres" id="10_yn8uc"]

[sub_resource type="Resource" id="Resource_l2cwv"]
script = ExtResource("4_avrwx")
spring_freq = 3.0
angular_damp = 10.0
force_scale = 1200.0
linear_scale = 360.0
swing_span = 0.349066
gravity = Vector3(0, -10, 0)
metadata/_custom_type_script = ExtResource("4_avrwx")

[sub_resource type="Resource" id="Resource_ghp2k"]
script = ExtResource("4_avrwx")
spring_freq = 2.0
angular_damp = 5.0
force_scale = 180.0
linear_scale = 3600.0
swing_span = 0.174533
gravity = Vector3(0, 0, 0)
metadata/_custom_type_script = ExtResource("4_avrwx")

[sub_resource type="Resource" id="Resource_avrwx"]
script = ExtResource("4_avrwx")
spring_freq = 3.0
angular_damp = 5.0
force_scale = 180.0
linear_scale = 360.0
swing_span = 0.436332
gravity = Vector3(0, 0, 0)
metadata/_custom_type_script = "uid://dk8kgax5eyeng"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a0xc8"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 1.0
initial_velocity_max = 3.0
scale_max = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q8qd3"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 1.0
initial_velocity_max = 3.0
scale_max = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i5c51"]
resource_local_to_scene = true
direction = Vector3(0, 0, 1)
spread = 1.0
initial_velocity_max = 3.0
scale_max = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_6wvr0"]
radius = 0.2
height = 0.4

[node name="Doll" type="Node3D"]
script = ExtResource("1_x8ebr")

[node name="BodySkeleton" parent="." instance=ExtResource("2_k7aqf")]
unique_name_in_owner = true

[node name="Skeleton3D" parent="BodySkeleton/rig" index="0"]
bones/0/position = Vector3(0, 0, 0.0430015)
bones/1/position = Vector3(0.00255518, 0.0475279, 0.894291)
bones/1/rotation = Quaternion(0.757525, 0.00925552, 0.0164505, 0.652533)
bones/2/rotation = Quaternion(0.0991244, 0.135855, 0.985634, -0.0156255)
bones/3/rotation = Quaternion(-0.192619, 0.00662866, -0.00574944, 0.981234)
bones/4/rotation = Quaternion(0.645754, -0.00714619, -0.0123402, 0.763412)
bones/5/rotation = Quaternion(0.208411, -0.000706456, -0.00015015, 0.978041)
bones/6/rotation = Quaternion(-0.0713537, -7.6425e-08, -8.38099e-08, 0.997451)
bones/7/rotation = Quaternion(5.07166e-09, 0.0752704, -5.93729e-08, 0.997163)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.00457407, -2.69004e-07, 4.69272e-08, 0.99999)
bones/9/rotation = Quaternion(-0.00821903, -1.43492e-06, -9.65002e-10, 0.999966)
bones/10/rotation = Quaternion(-0.782747, -0.0292231, -0.0253717, 0.621136)
bones/11/rotation = Quaternion(-0.059705, 0.140149, 0.988324, 0.00298289)
bones/12/rotation = Quaternion(-0.201077, -0.00667801, 0.00569204, 0.979536)
bones/13/rotation = Quaternion(0.651862, 0.0640085, -0.0400792, 0.754568)
bones/14/rotation = Quaternion(0.220631, 0.00127628, 0.000276407, 0.975357)
bones/15/rotation = Quaternion(-0.0760594, 6.56273e-08, 1.20479e-07, 0.997103)
bones/16/rotation = Quaternion(2.94798e-08, -0.0450489, 5.68339e-08, 0.998985)
bones/17/rotation = Quaternion(-0.00521246, 2.16802e-07, -1.16719e-07, 0.999986)
bones/18/rotation = Quaternion(-0.0098003, 1.4467e-06, -4.2939e-08, 0.999952)
bones/19/rotation = Quaternion(-0.784433, 0.029154, 0.0254511, 0.619005)
bones/20/rotation = Quaternion(-0.0467654, 0.00618021, 0.00570756, 0.99887)
bones/21/rotation = Quaternion(-0.0995905, 0.0011509, 0.00327079, 0.995022)
bones/22/rotation = Quaternion(0.00919711, 0.000869678, 0.00338085, 0.999952)
bones/23/rotation = Quaternion(0.221526, -0.00570289, -0.00466443, 0.975127)
bones/24/rotation = Quaternion(-0.143648, -0.015475, -0.00474867, 0.989497)
bones/25/rotation = Quaternion(-0.451011, -0.439459, -0.574282, 0.52313)
bones/26/rotation = Quaternion(-0.517249, 0.455559, -0.378902, 0.617537)
bones/27/rotation = Quaternion(0.154386, -0.000688847, -0.0111017, 0.987948)
bones/28/rotation = Quaternion(0.0197448, 0.0310433, -0.0362837, 0.998664)
bones/29/rotation = Quaternion(-0.0128109, 0.649168, -0.275168, 0.709013)
bones/30/rotation = Quaternion(0.277596, 0.00948548, -0.0322998, 0.960108)
bones/31/rotation = Quaternion(0.166321, 0.00461373, -0.0344825, 0.985458)
bones/32/rotation = Quaternion(0.0337859, 0.706848, -0.206528, 0.6757)
bones/33/rotation = Quaternion(0.338475, -0.00148533, -0.0125051, 0.940891)
bones/34/rotation = Quaternion(0.15458, -0.0013292, -0.0077326, 0.987949)
bones/35/rotation = Quaternion(0.0659574, 0.717671, -0.160847, 0.674334)
bones/36/rotation = Quaternion(0.290917, -0.0186566, -0.00909272, 0.956523)
bones/37/rotation = Quaternion(0.161842, -0.00965681, -0.00323022, 0.986764)
bones/38/rotation = Quaternion(0.0929861, 0.743274, -0.0818224, 0.657421)
bones/39/rotation = Quaternion(0.279316, -0.0254899, 0.00576787, 0.959844)
bones/40/rotation = Quaternion(0.148158, -0.0132568, 0.00949666, 0.988829)
bones/41/rotation = Quaternion(0.258996, 0.91767, 0.288542, 0.0868741)
bones/42/rotation = Quaternion(0.268329, 0.0456234, -0.0461033, 0.961141)
bones/43/rotation = Quaternion(0.198863, 0.029342, -0.0888305, 0.975552)
bones/45/rotation = Quaternion(-4.53346e-08, 0.0121378, 1.22891e-07, 0.999926)
bones/46/rotation = Quaternion(2.54749e-07, 0.0325945, 1.48369e-08, 0.999469)
bones/47/rotation = Quaternion(8.63655e-08, 0.117727, -3.97233e-07, 0.993046)
bones/48/rotation = Quaternion(-0.443077, 0.444671, 0.597612, 0.498809)
bones/49/rotation = Quaternion(-0.427991, -0.550401, 0.427056, 0.575765)
bones/50/rotation = Quaternion(0.103004, 0.00011289, 0.0111225, 0.994619)
bones/51/rotation = Quaternion(0.0282129, 0.014258, -0.023081, 0.999234)
bones/52/rotation = Quaternion(0.0213717, -0.657716, 0.250253, 0.710159)
bones/53/rotation = Quaternion(0.279333, -0.00960584, 0.0326168, 0.959592)
bones/54/rotation = Quaternion(0.192729, -0.0039177, 0.012724, 0.981162)
bones/55/rotation = Quaternion(0.0343424, -0.710229, 0.144205, 0.688186)
bones/56/rotation = Quaternion(0.345134, 0.00157287, 0.0128465, 0.938464)
bones/57/rotation = Quaternion(0.0816391, -8.07786e-05, -0.0116481, 0.996594)
bones/58/rotation = Quaternion(0.0795007, -0.719062, 0.108574, 0.681792)
bones/59/rotation = Quaternion(0.261959, 0.0164603, 0.00882012, 0.964898)
bones/60/rotation = Quaternion(0.159013, 0.00955284, 0.00183859, 0.987229)
bones/61/rotation = Quaternion(0.108099, -0.746925, 0.0219024, 0.655697)
bones/62/rotation = Quaternion(0.207398, 0.0170388, -0.00155329, 0.978107)
bones/63/rotation = Quaternion(0.0859842, 0.00636305, -0.0142155, 0.996175)
bones/64/rotation = Quaternion(-0.233554, 0.909701, 0.313039, -0.141081)
bones/65/rotation = Quaternion(0.223629, -0.0487866, 0.0586772, 0.971682)
bones/66/rotation = Quaternion(0.246476, 0.0484241, 0.00900337, 0.967897)
bones/68/rotation = Quaternion(3.99639e-08, 0.0066682, -3.58085e-08, 0.999978)
bones/69/rotation = Quaternion(1.0299e-07, 0.0154635, -3.44034e-07, 0.99988)
bones/70/rotation = Quaternion(-3.06088e-08, -0.0095263, 4.07429e-07, 0.999955)
bones/73/rotation = Quaternion(0.00734741, 0.124102, 0.990049, -0.0659461)
bones/74/rotation = Quaternion(-0.00708173, 0.128089, 0.989541, 0.0659752)

[node name="BoneAttachment3D" parent="BodySkeleton/rig/Skeleton3D" index="1"]
transform = Transform3D(0.999834, -0.01275, 0.0130412, 0.013171, 0.999378, -0.0327209, -0.0126159, 0.0328872, 0.99938, -0.0166762, 1.58634, 0.00371747)

[node name="VoiceHandler" parent="BodySkeleton/rig/Skeleton3D/BoneAttachment3D" index="1" instance=ExtResource("3_l2cwv")]
unique_name_in_owner = true

[node name="BreastLWiggle" type="SkeletonModifier3D" parent="BodySkeleton/rig/Skeleton3D" index="2"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.893205, 0.41564, 0.171544, 0.0302374, 0.32512, -0.945189, -0.448631, 0.849435, 0.277831, 0.00622458, 1.25342, -0.0807255)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_ghp2k")
bone_name = "breast.L"
properties = SubResource("Resource_l2cwv")
enableGravityHelper = true
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="BreastRWiggle" type="SkeletonModifier3D" parent="BodySkeleton/rig/Skeleton3D" index="3"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.933056, -0.350046, -0.0829153, 0.0280832, 0.300668, -0.953315, 0.358634, 0.887168, 0.290371, -0.0243019, 1.25244, -0.0792212)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_ghp2k")
bone_name = "breast.R"
properties = SubResource("Resource_l2cwv")
enableGravityHelper = true
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="ButtLWiggle" type="SkeletonModifier3D" parent="BodySkeleton/rig/Skeleton3D" index="4"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.999001, 0.0429744, -0.012241, 0.0156375, -0.0796117, 0.996703, 0.0418582, -0.995899, -0.0802042, 0.0907743, 0.942827, -0.00208239)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_ghp2k")
bone_name = "butt.L"
properties = SubResource("Resource_ghp2k")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="ButtRWiggle" type="SkeletonModifier3D" parent="BodySkeleton/rig/Skeleton3D" index="5"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.993587, -0.111345, -0.0196744, 0.00997402, -0.0870162, 0.996157, -0.112629, -0.989965, -0.0853475, -0.0864851, 0.940549, 0.0042133)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_ghp2k")
bone_name = "butt.R"
properties = SubResource("Resource_ghp2k")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="VaginaWiggle" type="SkeletonModifier3D" parent="BodySkeleton/rig/Skeleton3D" index="6"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.999287, 0.0141215, -0.0350027, 0.0128442, -0.999253, -0.0364526, -0.0354913, 0.035977, -0.998722, 0.00324993, 0.926173, 0.0265724)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_ghp2k")
bone_name = "vagina"
properties = SubResource("Resource_avrwx")
metadata/_custom_type_script = "uid://1n0mqd1c34ui"

[node name="BoneAttachment3D3" parent="BodySkeleton/rig/Skeleton3D" index="7"]
transform = Transform3D(0.998752, -0.0134649, 0.0481034, 0.0279564, 0.948717, -0.314887, -0.0413966, 0.315839, 0.947909, -0.0157673, 1.5223, -0.017603)

[node name="AttachAnkle" parent="BodySkeleton/rig/Skeleton3D" index="8"]
transform = Transform3D(-0.975046, -0.0240281, 0.220698, -0.0336339, -0.966662, -0.253838, 0.21944, -0.254927, 0.941732, 0.123073, 0.514372, 0.0484843)

[node name="AttachAnkle2" parent="BodySkeleton/rig/Skeleton3D" index="9"]
transform = Transform3D(-0.997286, 0.0366817, -0.0638268, -0.0181901, -0.962919, -0.269177, -0.0713339, -0.267286, 0.960973, -0.0887453, 0.511695, 0.06125)

[node name="AttachWrist" parent="BodySkeleton/rig/Skeleton3D" index="10"]
transform = Transform3D(-0.986962, -0.0920055, 0.132065, 0.112678, -0.980871, 0.158735, 0.114934, 0.171546, 0.978449, -0.22153, 1.0101, 0.00947762)

[node name="AttachWrist2" parent="BodySkeleton/rig/Skeleton3D" index="11"]
transform = Transform3D(-0.958264, 0.218521, 0.184332, -0.167394, -0.951572, 0.257856, 0.231751, 0.216238, 0.948437, 0.219187, 1.03188, -0.0202517)

[node name="AttachBreast" parent="BodySkeleton/rig/Skeleton3D" index="12"]
transform = Transform3D(0.893205, 0.41564, 0.171544, 0.0302374, 0.32512, -0.945189, -0.448631, 0.849435, 0.277831, 0.00622458, 1.25342, -0.0807255)

[node name="AttachBreast2" parent="BodySkeleton/rig/Skeleton3D" index="13"]
transform = Transform3D(0.933056, -0.350046, -0.0829153, 0.0280832, 0.300668, -0.953315, 0.358634, 0.887168, 0.290371, -0.0243019, 1.25244, -0.0792212)

[node name="ChestBoneAttachment" parent="BodySkeleton/rig/Skeleton3D" index="14"]
transform = Transform3D(0.99828, -0.0386165, 0.0441043, 0.0318796, 0.98901, 0.144372, -0.0491947, -0.142717, 0.98854, -0.00175009, 1.18981, 0.027024)

[node name="UpperChestBoneAttachment" parent="BodySkeleton/rig/Skeleton3D" index="15"]
transform = Transform3D(0.99792, -0.0445314, 0.0466052, 0.0383395, 0.991261, 0.126219, -0.0518187, -0.12417, 0.990907, -0.00785764, 1.34623, 0.00445195)

[node name="BoneAttachment3D2" parent="BodySkeleton/rig/Skeleton3D" index="16"]
transform = Transform3D(0.999287, -0.00744635, 0.0370023, 0.0128442, 0.988925, -0.14786, -0.0354915, 0.14823, 0.988316, 0.00255518, 0.894291, -0.00452638)

[node name="DollAttachPoint" parent="BodySkeleton/rig/Skeleton3D/BoneAttachment3D2" index="0"]
transform = Transform3D(1, -1.45787e-15, -1.45906e-15, 1.70219e-15, 0.982808, 0.184638, 1.16479e-15, -0.184638, 0.982808, -1.65712e-15, 0.127416, -0.0878506)

[node name="SquirtParticles1" parent="BodySkeleton/rig/Skeleton3D/BoneAttachment3D2/SquirtNode" index="0"]
process_material = SubResource("ParticleProcessMaterial_a0xc8")

[node name="SquirtParticles2" parent="BodySkeleton/rig/Skeleton3D/BoneAttachment3D2/SquirtNode" index="1"]
process_material = SubResource("ParticleProcessMaterial_q8qd3")

[node name="SquirtParticles3" parent="BodySkeleton/rig/Skeleton3D/BoneAttachment3D2/SquirtNode" index="2"]
process_material = SubResource("ParticleProcessMaterial_i5c51")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BodySkeleton"]
unique_name_in_owner = true
libraries = {
&"BasicAnims": ExtResource("5_avrwx"),
&"LocomotionAnims": ExtResource("7_l2cwv"),
&"RestraintAnims": ExtResource("8_yudco")
}
autoplay = "BodyAnims/Idle"

[node name="AnimationTree" type="AnimationTree" parent="BodySkeleton"]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = ExtResource("10_yn8uc")
anim_player = NodePath("../AnimationPlayer")
parameters/ArmBinder_Blend/blend_amount = 0.0
parameters/Arms_Blend/blend_amount = 0.0
parameters/Arms_Selector/current_state = "state_0"
parameters/Arms_Selector/transition_request = ""
parameters/Arms_Selector/current_index = 0
parameters/CuffedBehindBack_Blend/blend_amount = 0.0
parameters/CuffedFront_Blend/blend_amount = 0.0
parameters/Locomotion/Idle/Idle_Selector/current_state = "normal1"
parameters/Locomotion/Idle/Idle_Selector/transition_request = ""
parameters/Locomotion/Idle/Idle_Selector/current_index = 0
parameters/Locomotion/Walk/Walk_Selector/current_state = "unisex"
parameters/Locomotion/Walk/Walk_Selector/transition_request = ""
parameters/Locomotion/Walk/Walk_Selector/current_index = 0
parameters/RestraintAnims_BRIDGE/blend_amount = 0

[node name="AnimationPlayerRestraints" type="AnimationPlayer" parent="BodySkeleton"]
unique_name_in_owner = true
active = false
libraries = {
&"RestraintAnims": ExtResource("8_yudco")
}
autoplay = "BodyAnims/Idle"

[node name="AnimationTreeRestraints" type="AnimationTree" parent="BodySkeleton"]
unique_name_in_owner = true
active = false
root_node = NodePath("%AnimationTreeRestraints/..")
tree_root = ExtResource("9_1pahp")
anim_player = NodePath("../AnimationPlayerRestraints")
parameters/ArmBinder_Blend/blend_amount = 0.0
parameters/Arms_Blend/blend_amount = 0
parameters/Arms_Selector/current_state = ""
parameters/Arms_Selector/transition_request = "state_0"
parameters/Arms_Selector/current_index = -1
parameters/CuffedBehindBack_Blend/blend_amount = 0
parameters/CuffedFront_Blend/blend_amount = 0
parameters/RestraintAnims_BRIDGE/blend_amount = 0

[node name="TestHeadDollPart" parent="." instance=ExtResource("2_4v17s")]

[node name="DollAttachTo" parent="TestHeadDollPart" node_paths=PackedStringArray("skeletonMeshes") instance=ExtResource("4_mwovh")]
attachPoint = "head"
skeletonMeshes = [NodePath("MeshInstance3D")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="TestHeadDollPart/DollAttachTo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.162449, 0)
visible = false
mesh = SubResource("SphereMesh_6wvr0")

[node name="AlphaMaskTexture" parent="." instance=ExtResource("10_ehs3x")]
unique_name_in_owner = true
resolution = Vector2i(256, 256)
clearColor = Color(0, 0, 0, 0)

[connection signal="onEvent" from="BodySkeleton/rig/Skeleton3D/BoneAttachment3D/VoiceHandler" to="." method="_on_voice_handler_on_event"]
[connection signal="onSound" from="BodySkeleton/rig/Skeleton3D/BoneAttachment3D/VoiceHandler" to="." method="_on_voice_handler_on_sound"]
[connection signal="onTextureUpdated" from="AlphaMaskTexture" to="." method="_on_alpha_mask_texture_on_texture_updated"]

[editable path="BodySkeleton"]
